overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taxcalc-api
spec:
  rules:
    - host: taxcalc.dev.uptimecrew.internal
